refactorizacion de la prueba inicial funcionando